# Ultralytics-QAT-Intelligent-Syringe-Volume-Measurement

./: .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
intelligent_syringe_volume_measurement_with_yolov8_and_qat/: __init__.py  dataset.py  features.py  plots.py
intelligent_syringe_volume_measurement_with_yolov8_and_qat/modeling/: predict.py  train.py
notebook/: 2_trex_analysis.ipynb
notebooks/: 1_yolov8_qat.ipynb  3_evaluation.ipynb
