[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "intelligent_syringe_volume_measurement_with_yolov8_and_qat"
version = "0.0.1"
description = "An automated syringe volume measurement system with YOLOv8 and Quantization Aware Training (QAT) implementation"
authors = [
  { name = "Aunuun Jeffry Mahbuubi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["intelligent_syringe_volume_measurement_with_yolov8_and_qat"]
force_sort_within_sections = true
